<resources>
    <string name="app_name">CSI</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string-array name="tasks">
        <item>"Testing report"</item>
        <item>"Database management"</item>
        <item>"Debugging report"</item>
        <item>"Budget report"</item>
        <item>"SRS report"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="csi">CSI</string>
    <string name="services">Services</string>
    <string name="notifications">Notifications</string>
</resources>
